--- a/style.css
+++ b/style.css
@@ -74,9 +74,9 @@ body {
 
 .row-content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 10px;
-    align-items: stretch;
+    align-items: center;
     border: 0px solid green;
 }
 
@@ -108,4 +108,21 @@ error-output {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+
+.profie-radio-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-radio-content>label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.profile {
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 12px;
 }
